# pserve

./: Cargo.toml  README.md  flake.nix
examples/hello_server/: Cargo.toml  build.bat  build.sh
examples/hello_server/src/: client.rs  lib.rs  main.rs
examples/oauth/: Cargo.toml  build.sh
examples/oauth/src/: client.rs  lib.rs  main.rs
src/: client.rs  dom.rs  lib.rs  server.rs  signal.rs  state.rs  ui.rs
src/html/: index.html  runtime.js
