[package]
name = "pserve"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8.3", features = ["tracing", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "tokio-macros"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
