[package]
name = "hello_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "hello_server"
crate-type = ["cdylib", "rlib"]

[dependencies]
pserve = { path = "../.." }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"

[profile.release]
strip = true
