[package]
name = "oauth"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "oauth"
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }

[dependencies]
dotenvy = { git = "https://github.com/allan2/dotenvy", rev = "86c0d6dd2938e615135813df9e3274bf8f42c455", features = ["macros"]}
dotenvy_macro = { git = "https://github.com/allan2/dotenvy", rev = "86c0d6dd2938e615135813df9e3274bf8f42c455"}
pserve = { path = "../.." }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
strip = true
